# RHICfSimGenerator

./: CMakeLists.txt  README.md
generators/: genCRMC2.1.sh  genHERWIG7.3.sh  genPYTHIA8.sh
generators/crmc2.1/: CMakeLists.txt  ChangeLog  README.md
generators/crmc2.1/CMakeModules/: FindRoot.cmake
generators/crmc2.1/ExampleAnalyser/: CMakeLists.txtbackup  CRMC.ipynb  README.md
generators/crmc2.1/ExampleAnalyser/src/: analysis.cc  analysis.h  analysisROOT.cc  histogram.hh
generators/crmc2.1/install/etc/: crmc.param
generators/crmc2.1/install/include/crmc/: CRMCinterface.h  CRMCoptions.h  OutputPolicyNone.h  epos.inc
generators/crmc2.1/src/: CRMC.cc  CRMCconfig.h.in  CRMCinterface.cc  CRMCinterface.h-HEPMC-TEMPLATE  CRMCoptions.cc  OutputPolicyHepMC.cc  OutputPolicyHepMC3.cc  OutputPolicyHepMC3.h  OutputPolicyNone.cc  OutputPolicyROOT.cc  OutputPolicyROOT.h  crmc-aaa.f  crmc.param.in  epos.inc-HEPMC-TEMPLATE  epos.incems
generators/crmc2.1/src/dpmjet/3.0-6/: dpmjet3.0-6.f
generators/crmc2.1/src/epos/: CMakeLists.txt  epos-bas.f  epos-con.f  epos-dro.f  epos-ems.f  epos-hnb.f  epos-ids.f  epos-int.f  epos-rsh.f  epos-sem.f  epos-uti.f
generators/crmc2.1/src/geant4/: G4HadronPhysicsCRMC.hh  G4HadronicInelasticModelCRMC.cc
generators/crmc2.1/src/qgsjetII-04/: qgsjetII_epos.f
generators/crmc2.1/src/qgsjetIII/: qgsjet-III.f  qgsjetIII_epos.f
generators/crmc2.1/src/sibyll/: sibyll2.3d.f  sibyll_epos.f
generators/herwig7.3/: HwRHICfHandler.cc  HwRHICfHandler.h  Makefile  RHIC-MB_template.in  makeHerwigInput.C
generators/pythia8/: Diffractive_STARDetroit.cmnd  Makefile  Makefile.inc  RHICfSimPYTHIA8_Detroit_templete.cc
source/: LinkDef.h  Parameters.hh  RHICfSimManager.cc  RHICfSimManager.hh
